syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package="./notifications";

// protoc -I protos/ protos/message-service.proto --go_out=plugins=grpc:protos/
// For now just adding to queue. (Later on we can add to queue based on priorities)
service Notification {
  // rpc AddToQueue(MessageRequest) returns (MessageResponse);
  rpc SendNotification(MessageRequest) returns (MessageResponse);
  rpc AddToQueue(MessageRequest) returns (MessageResponse);
  rpc RemoveFromQueue(google.protobuf.Empty) returns (MessageRequest);
}

message MessageRequest {
  NotificationType type = 1;
  string to = 2;
  string msg = 3;
  string subject = 4;
}

message MessageResponse {
  bool success = 1;
}

// Later add SMS, Push, etc.
enum NotificationType {
  EMAIL=0;
}